cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_09407_279155838.yaml
Resources:
  loancalcvpc163DFB76:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/Resource
  loancalcvpcPublicSubnet1SubnetAF197063:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.0.0/18
      VpcId:
        Ref: loancalcvpc163DFB76
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/Subnet
  loancalcvpcPublicSubnet1RouteTableD5A82DC4:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: loancalcvpc163DFB76
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/RouteTable
  loancalcvpcPublicSubnet1RouteTableAssociationBD3732C6:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: loancalcvpcPublicSubnet1RouteTableD5A82DC4
      SubnetId:
        Ref: loancalcvpcPublicSubnet1SubnetAF197063
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/RouteTableAssociation
  loancalcvpcPublicSubnet1DefaultRouteCB56E8F5:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: loancalcvpcPublicSubnet1RouteTableD5A82DC4
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: loancalcvpcIGW6C766870
    DependsOn:
      - loancalcvpcVPCGWC404E392
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/DefaultRoute
  loancalcvpcPublicSubnet1EIP9BF654E8:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/EIP
  loancalcvpcPublicSubnet1NATGatewayBB80CF48:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - loancalcvpcPublicSubnet1EIP9BF654E8
          - AllocationId
      SubnetId:
        Ref: loancalcvpcPublicSubnet1SubnetAF197063
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet1/NATGateway
  loancalcvpcPublicSubnet2Subnet67DA5FD3:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.64.0/18
      VpcId:
        Ref: loancalcvpc163DFB76
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/Subnet
  loancalcvpcPublicSubnet2RouteTable7B42FD54:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: loancalcvpc163DFB76
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/RouteTable
  loancalcvpcPublicSubnet2RouteTableAssociationFD0E1E1F:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: loancalcvpcPublicSubnet2RouteTable7B42FD54
      SubnetId:
        Ref: loancalcvpcPublicSubnet2Subnet67DA5FD3
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/RouteTableAssociation
  loancalcvpcPublicSubnet2DefaultRoute6C3A5722:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: loancalcvpcPublicSubnet2RouteTable7B42FD54
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: loancalcvpcIGW6C766870
    DependsOn:
      - loancalcvpcVPCGWC404E392
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/DefaultRoute
  loancalcvpcPublicSubnet2EIPB8A62A95:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/EIP
  loancalcvpcPublicSubnet2NATGatewayEA9A7B1C:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - loancalcvpcPublicSubnet2EIPB8A62A95
          - AllocationId
      SubnetId:
        Ref: loancalcvpcPublicSubnet2Subnet67DA5FD3
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PublicSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PublicSubnet2/NATGateway
  loancalcvpcPrivateSubnet1SubnetDAE99667:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.128.0/18
      VpcId:
        Ref: loancalcvpc163DFB76
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet1/Subnet
  loancalcvpcPrivateSubnet1RouteTableA3E5788D:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: loancalcvpc163DFB76
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PrivateSubnet1
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet1/RouteTable
  loancalcvpcPrivateSubnet1RouteTableAssociationE1363883:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: loancalcvpcPrivateSubnet1RouteTableA3E5788D
      SubnetId:
        Ref: loancalcvpcPrivateSubnet1SubnetDAE99667
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet1/RouteTableAssociation
  loancalcvpcPrivateSubnet1DefaultRoute35D38ACE:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: loancalcvpcPrivateSubnet1RouteTableA3E5788D
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: loancalcvpcPublicSubnet1NATGatewayBB80CF48
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet1/DefaultRoute
  loancalcvpcPrivateSubnet2SubnetC650B3AA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.0.192.0/18
      VpcId:
        Ref: loancalcvpc163DFB76
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet2/Subnet
  loancalcvpcPrivateSubnet2RouteTable42548EB6:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: loancalcvpc163DFB76
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc/PrivateSubnet2
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet2/RouteTable
  loancalcvpcPrivateSubnet2RouteTableAssociation8CCC0168:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: loancalcvpcPrivateSubnet2RouteTable42548EB6
      SubnetId:
        Ref: loancalcvpcPrivateSubnet2SubnetC650B3AA
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet2/RouteTableAssociation
  loancalcvpcPrivateSubnet2DefaultRoute1E861384:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: loancalcvpcPrivateSubnet2RouteTable42548EB6
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: loancalcvpcPublicSubnet2NATGatewayEA9A7B1C
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/PrivateSubnet2/DefaultRoute
  loancalcvpcIGW6C766870:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: InfraStack/loan-calc-vpc
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/IGW
  loancalcvpcVPCGWC404E392:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: loancalcvpc163DFB76
      InternetGatewayId:
        Ref: loancalcvpcIGW6C766870
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-vpc/VPCGW
  loancalccluster3F92D986:
    Type: AWS::ECS::Cluster
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-cluster/Resource
  loancalcfargateserviceLBF4711708:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Scheme: internet-facing
      SecurityGroups:
        - Fn::GetAtt:
            - loancalcfargateserviceLBSecurityGroup7F079209
            - GroupId
      Subnets:
        - Ref: loancalcvpcPublicSubnet1SubnetAF197063
        - Ref: loancalcvpcPublicSubnet2Subnet67DA5FD3
      Type: application
    DependsOn:
      - loancalcvpcPublicSubnet1DefaultRouteCB56E8F5
      - loancalcvpcPublicSubnet2DefaultRoute6C3A5722
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/LB/Resource
  loancalcfargateserviceLBSecurityGroup7F079209:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatically created Security Group for ELB InfraStackloancalcfargateserviceLBE87072AB
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: Allow from anyone on port 80
          FromPort: 80
          IpProtocol: tcp
          ToPort: 80
      VpcId:
        Ref: loancalcvpc163DFB76
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/LB/SecurityGroup/Resource
  loancalcfargateserviceLBSecurityGrouptoInfraStackloancalcfargateserviceServiceSecurityGroupE462D2AE8020A0DC92:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId:
        Fn::GetAtt:
          - loancalcfargateserviceLBSecurityGroup7F079209
          - GroupId
      IpProtocol: tcp
      Description: Load balancer to target
      DestinationSecurityGroupId:
        Fn::GetAtt:
          - loancalcfargateserviceServiceSecurityGroup7C2D3410
          - GroupId
      FromPort: 80
      ToPort: 80
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/LB/SecurityGroup/to InfraStackloancalcfargateserviceServiceSecurityGroupE462D2AE:80
  loancalcfargateserviceLBPublicListener87FBE2DA:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
        - TargetGroupArn:
            Ref: loancalcfargateserviceLBPublicListenerECSGroupAB366F56
          Type: forward
      LoadBalancerArn:
        Ref: loancalcfargateserviceLBF4711708
      Port: 80
      Protocol: HTTP
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/LB/PublicListener/Resource
  loancalcfargateserviceLBPublicListenerECSGroupAB366F56:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPath: /
      Port: 80
      Protocol: HTTP
      TargetType: ip
      VpcId:
        Ref: loancalcvpc163DFB76
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/LB/PublicListener/ECSGroup/Resource
  loancalcfargateserviceTaskDefTaskRole788016A6:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/TaskDef/TaskRole/Resource
  loancalcfargateserviceTaskDef8F026E8A:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Environment:
            - Name: PORT
              Value: "80"
          Essential: true
          Image:
            Fn::Join:
              - ""
              - - 965283624813.dkr.ecr.eu-west-1.
                - Ref: AWS::URLSuffix
                - /loan-calc:latest
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group:
                Ref: loancalcfargateserviceTaskDefwebLogGroup8EAF76B2
              awslogs-stream-prefix: loan-calc
              awslogs-region:
                Ref: AWS::Region
          Name: web
          PortMappings:
            - ContainerPort: 80
              Protocol: tcp
      Cpu: "256"
      ExecutionRoleArn:
        Fn::GetAtt:
          - loancalcfargateserviceTaskDefExecutionRoleA2657976
          - Arn
      Family: InfraStackloancalcfargateserviceTaskDefB424017B
      Memory: "512"
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      TaskRoleArn:
        Fn::GetAtt:
          - loancalcfargateserviceTaskDefTaskRole788016A6
          - Arn
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/TaskDef/Resource
  loancalcfargateserviceTaskDefwebLogGroup8EAF76B2:
    Type: AWS::Logs::LogGroup
    UpdateReplacePolicy: Retain
    DeletionPolicy: Retain
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/TaskDef/web/LogGroup/Resource
  loancalcfargateserviceTaskDefExecutionRoleA2657976:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/TaskDef/ExecutionRole/Resource
  loancalcfargateserviceTaskDefExecutionRoleDefaultPolicyA2EEF2C1:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - ecr:BatchCheckLayerAvailability
              - ecr:GetDownloadUrlForLayer
              - ecr:BatchGetImage
            Effect: Allow
            Resource: arn:aws:ecr:eu-west-1:965283624813:repository/loan-calc
          - Action: ecr:GetAuthorizationToken
            Effect: Allow
            Resource: "*"
          - Action:
              - logs:CreateLogStream
              - logs:PutLogEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - loancalcfargateserviceTaskDefwebLogGroup8EAF76B2
                - Arn
        Version: "2012-10-17"
      PolicyName: loancalcfargateserviceTaskDefExecutionRoleDefaultPolicyA2EEF2C1
      Roles:
        - Ref: loancalcfargateserviceTaskDefExecutionRoleA2657976
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/TaskDef/ExecutionRole/DefaultPolicy/Resource
  loancalcfargateserviceServiceC4D58B2F:
    Type: AWS::ECS::Service
    Properties:
      Cluster:
        Ref: loancalccluster3F92D986
      DeploymentConfiguration:
        MaximumPercent: 200
        MinimumHealthyPercent: 50
      DesiredCount: 2
      EnableECSManagedTags: false
      HealthCheckGracePeriodSeconds: 60
      LaunchType: FARGATE
      LoadBalancers:
        - ContainerName: web
          ContainerPort: 80
          TargetGroupArn:
            Ref: loancalcfargateserviceLBPublicListenerECSGroupAB366F56
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - Fn::GetAtt:
                - loancalcfargateserviceServiceSecurityGroup7C2D3410
                - GroupId
          Subnets:
            - Ref: loancalcvpcPrivateSubnet1SubnetDAE99667
            - Ref: loancalcvpcPrivateSubnet2SubnetC650B3AA
      TaskDefinition:
        Ref: loancalcfargateserviceTaskDef8F026E8A
    DependsOn:
      - loancalcfargateserviceLBPublicListenerECSGroupAB366F56
      - loancalcfargateserviceLBPublicListener87FBE2DA
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/Service/Service
  loancalcfargateserviceServiceSecurityGroup7C2D3410:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: InfraStack/loan-calc-fargate-service/Service/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: loancalcvpc163DFB76
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/Service/SecurityGroup/Resource
  loancalcfargateserviceServiceSecurityGroupfromInfraStackloancalcfargateserviceLBSecurityGroup771A970680E87BA10A:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: Load balancer to target
      FromPort: 80
      GroupId:
        Fn::GetAtt:
          - loancalcfargateserviceServiceSecurityGroup7C2D3410
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - loancalcfargateserviceLBSecurityGroup7F079209
          - GroupId
      ToPort: 80
    Metadata:
      aws:cdk:path: InfraStack/loan-calc-fargate-service/Service/SecurityGroup/from InfraStackloancalcfargateserviceLBSecurityGroup771A9706:80
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Modules: aws-cdk=2.113.0,@aws-cdk/assets=1.51.0,@aws-cdk/aws-applicationautoscaling=1.51.0,@aws-cdk/aws-autoscaling=1.51.0,@aws-cdk/aws-autoscaling-common=1.51.0,@aws-cdk/aws-autoscaling-hooktargets=1.51.0,@aws-cdk/aws-certificatemanager=1.51.0,@aws-cdk/aws-cloudwatch=1.51.0,@aws-cdk/aws-ec2=1.51.0,@aws-cdk/aws-ecr=1.51.0,@aws-cdk/aws-ecr-assets=1.51.0,@aws-cdk/aws-ecs=1.51.0,@aws-cdk/aws-ecs-patterns=1.51.0,@aws-cdk/aws-elasticloadbalancingv2=1.51.0,@aws-cdk/aws-events=1.51.0,@aws-cdk/aws [...]
    Condition: CDKMetadataAvailable
Outputs:
  loancalcfargateserviceLoadBalancerDNSA2F191A6:
    Value:
      Fn::GetAtt:
        - loancalcfargateserviceLBF4711708
        - DNSName
  loancalcfargateserviceServiceURLCF3DAC9D:
    Value:
      Fn::Join:
        - ""
        - - http://
          - Fn::GetAtt:
              - loancalcfargateserviceLBF4711708
              - DNSName
  LoadBalancerDNS:
    Value:
      Fn::GetAtt:
        - loancalcfargateserviceLBF4711708
        - DNSName
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - il-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
